--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,14 +11,16 @@ base32 = "0.4"
 clap = { version = "4", features = ["derive"] }
 const_format = "0.2"
 current_platform = "0.2"
-dialoguer = { git = "https://github.com/galtland/dialoguer", branch = "master", features = ["fuzzy-select"] }
-frozenkrill-core = {path = "./frozenkrill-core"}
+dialoguer = { git = "https://github.com/galtland/dialoguer", branch = "master", features = [
+    "fuzzy-select",
+] }
+frozenkrill-core = { path = "./frozenkrill-core" }
 indicatif = "0.17"
 mockall = "0.11"
 path-absolutize = "3"
 qr2term = "0.3"
 serde = { version = "1", features = ["derive"] }
-termimad = "0.20"
+termimad = "0.23"
 zxcvbn = "2"
 rexpect = { git = "https://github.com/galtland/rexpect", branch = "verbose", optional = true }
 
