--- a/frozenkrill-core/Cargo.toml
+++ b/frozenkrill-core/Cargo.toml
@@ -4,13 +4,16 @@ version = "0.0.0"
 edition = "2021"
 
 [dependencies]
-alkali = "0.1"
+alkali = "0.3"
 anyhow = { version = "1", features = ["backtrace"] }
-bip39 = { git = "https://github.com/rust-bitcoin/rust-bip39", features = ["rand", "zeroize"] }
+bip39 = { git = "https://github.com/rust-bitcoin/rust-bip39", features = [
+    "rand",
+    "zeroize",
+] }
 bitcoin = "0.29"
-bitcoin_scripts = {git = "https://github.com/galtland/bp-foundation", branch="compilation_fix"}
+bitcoin_scripts = "0.9.1"
 blake3 = { version = "1", features = ["rayon"] }
-descriptor-wallet = {git="https://github.com/galtland/descriptor-wallet.git", branch = "updated", features=["sign"]}
+descriptor-wallet = { version = "0.9.2", features = ["sign"] }
 env_logger = "0.10"
 flate2 = "1"
 hex = "0.4"
@@ -22,12 +25,12 @@ rand = "0.8"
 rand_core = "0.6"
 rayon = "1.6"
 regex = "1"
-secp256k1 = { version = "0.24", features = ["rand-std"] }
+secp256k1 = { version = "0.24.3", features = ["rand-std"] }
 secrecy = "0.8"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 sha2 = "0.10"
-slip132 = "0.9.0-alpha.1"
+slip132 = "0.9.0"
 thiserror = "1"
 walkdir = "2"
 zeroize = { version = "1", features = ["zeroize_derive"] }
