--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,6 +21,8 @@ jobs:
       - uses: actions/checkout@v3
       - name: Show cargo version
         run: cargo --version
+      - name: Show rustc version
+        run: rustc --version
       - name: Install cross
         run: |
           cargo install cross --git https://github.com/cross-rs/cross
