--- a/frozenkrill-core/Cargo.toml
+++ b/frozenkrill-core/Cargo.toml
@@ -11,9 +11,8 @@ bip39 = { git = "https://github.com/rust-bitcoin/rust-bip39", features = [
     "zeroize",
 ] }
 bitcoin = "0.29"
-bitcoin_scripts = "0.9.1"
+bitcoin_scripts = "0.10"
 blake3 = { version = "1", features = ["rayon"] }
-descriptor-wallet = { version = "0.9.2", features = ["sign"] }
 env_logger = "0.10"
 flate2 = "1"
 hex = "0.4"
@@ -21,6 +20,8 @@ itertools = "0.10"
 log = "0.4"
 miniscript = "9"
 once_cell = "1"
+# psbt = { version = "0.10.0", features = ["sign"] }
+psbt = { path = "../../descriptor-wallet/psbt", features = ["sign"] }
 rand = "0.8"
 rand_core = "0.6"
 rayon = "1.6"
