--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,12 +35,12 @@ jobs:
       - name: Fetch
         run: |
           cargo fetch --locked
-      # - name: Build x86_64-unknown-linux-gnu
-      #   run: |
-      #     cargo build --release --frozen
-      # - name: Test x86_64-unknown-linux-gnu including cli
-      #   run: |
-      #     cargo test --release --frozen --workspace --features cli_tests -- --nocapture
+      - name: Build x86_64-unknown-linux-gnu
+        run: |
+          cargo build --release --frozen
+      - name: Test x86_64-unknown-linux-gnu including cli
+        run: |
+          cargo test --release --frozen --workspace --features cli_tests -- --nocapture
       - name: Build x86_64-unknown-linux-musl
         run: |
           cargo clean && cross build --target=x86_64-unknown-linux-musl --release --frozen
