trying to update rust-bitcoin

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,10 +37,10 @@ jobs:
           cargo fetch --locked
       - name: Build x86_64-unknown-linux-gnu
         run: |
-          cargo build --release --frozen
+          cargo build --target x86_64-unknown-linux-gnu --release --frozen
       - name: Test x86_64-unknown-linux-gnu including cli
         run: |
-          cargo test --release --frozen --workspace --features cli_tests -- --nocapture
+          cargo test --target x86_64-unknown-linux-gnu --release --frozen --workspace --features cli_tests -- --nocapture
       - name: Build x86_64-unknown-linux-musl
         run: |
           cargo clean && cross build --target=x86_64-unknown-linux-musl --release --frozen
