--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,9 +34,19 @@ tempdir = "0.3"
 
 [profile.release]
 strip = true
+opt-level = 3
+
+[profile.release.package.bitcoin_scripts]
+opt-level = 2
+
+[profile.release.package."*"]
+opt-level = 3
 
 [profile.dev]
 opt-level = 1
+
+[profile.dev.package.bitcoin_scripts]
+opt-level = 2
 
 [profile.dev.package."*"]
 opt-level = 3
