feat: allow password to be given through args/env

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ members = ["frozenkrill-core"]
 
 [dependencies]
 base32 = "0.4"
-clap = { version = "4", features = ["derive"] }
+clap = { version = "4", features = ["derive", "env"] }
 const_format = "0.2"
 current_platform = "0.2"
 dialoguer = { git = "https://github.com/galtland/dialoguer", branch = "master", features = [
