--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -31,7 +31,7 @@ jobs:
           cargo build --target=x86_64-unknown-linux-gnu --release --frozen
       - name: Test x86_64-unknown-linux-gnu
         run: |
-          cargo test --target=x86_64-unknown-linux-gnu --release --frozen --workspace --features cli_tests -- --nocapture
+          cargo test --target=x86_64-unknown-linux-gnu --release --frozen --workspace --features cli_tests -- --nocapture --test-threads 1
       - name: Build x86_64-unknown-linux-musl
         run: |
           cargo clean && cross build --target=x86_64-unknown-linux-musl --release --frozen
