--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,6 @@
 name: CI
 
-# Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the "master" branch
   push:
     branches: ["master"]
   pull_request:
@@ -12,14 +10,12 @@ on:
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   test:
     runs-on: ubuntu-latest
 
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - name: rustup update
         run: rustup update
       - name: Show cargo version
@@ -49,14 +45,18 @@ jobs:
         run: |
           cross test --target=x86_64-unknown-linux-musl --release --frozen --workspace --features cli_tests -- --nocapture --test-threads 1
       - name: Build armv7-unknown-linux-musleabihf
+        if: ${{ github.event.issue.pull_request }} # only required to detect big issues, not required on merge queue etc
         run: |
           cargo clean && cross build --target=armv7-unknown-linux-musleabihf --release --frozen
       - name: Test armv7-unknown-linux-musleabihf
+        if: ${{ github.event.issue.pull_request }} # only required to detect big issues, not required on merge queue etc
         run: |
           cross test --target=armv7-unknown-linux-musleabihf --release --frozen --workspace -- --nocapture --test-threads 1
       - name: Build aarch64-unknown-linux-musl
+        if: ${{ github.event.issue.pull_request }} # only required to detect big issues, not required on merge queue etc
         run: |
           cargo clean && cross build --target=aarch64-unknown-linux-musl --release --frozen
       - name: Test aarch64-unknown-linux-musl
+        if: ${{ github.event.issue.pull_request }} # only required to detect big issues, not required on merge queue etc
         run: |
           cross test --target=aarch64-unknown-linux-musl --release --frozen --workspace -- --nocapture --test-threads 1
