--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,18 +45,18 @@ jobs:
         run: |
           cross test --target=x86_64-unknown-linux-musl --release --frozen --workspace --features cli_tests -- --nocapture --test-threads 1
       - name: Build armv7-unknown-linux-musleabihf
-        if: ${{ github.event.issue.pull_request }} # only required to detect big issues, not required on merge queue etc
+        if: ${{ github.event.pull_request }} # only required to detect big issues, not required on merge queue etc
         run: |
           cargo clean && cross build --target=armv7-unknown-linux-musleabihf --release --frozen
       - name: Test armv7-unknown-linux-musleabihf
-        if: ${{ github.event.issue.pull_request }} # only required to detect big issues, not required on merge queue etc
+        if: ${{ github.event.pull_request }} # only required to detect big issues, not required on merge queue etc
         run: |
           cross test --target=armv7-unknown-linux-musleabihf --release --frozen --workspace -- --nocapture --test-threads 1
       - name: Build aarch64-unknown-linux-musl
-        if: ${{ github.event.issue.pull_request }} # only required to detect big issues, not required on merge queue etc
+        if: ${{ github.event.pull_request }} # only required to detect big issues, not required on merge queue etc
         run: |
           cargo clean && cross build --target=aarch64-unknown-linux-musl --release --frozen
       - name: Test aarch64-unknown-linux-musl
-        if: ${{ github.event.issue.pull_request }} # only required to detect big issues, not required on merge queue etc
+        if: ${{ github.event.pull_request }} # only required to detect big issues, not required on merge queue etc
         run: |
           cross test --target=aarch64-unknown-linux-musl --release --frozen --workspace -- --nocapture --test-threads 1
