--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -23,6 +23,11 @@ jobs:
 
     - name: Install Rust toolchain
       uses: dtolnay/rust-toolchain@stable
+      with:
+        targets: x86_64-unknown-linux-musl
+
+    - name: Install musl tools
+      run: sudo apt-get update && sudo apt-get install -y musl-tools
 
     - name: Cache cargo dependencies
       uses: actions/cache@v4
@@ -59,6 +64,11 @@ jobs:
 
     - name: Install Rust toolchain
       uses: dtolnay/rust-toolchain@stable
+      with:
+        targets: x86_64-unknown-linux-musl
+
+    - name: Install musl tools
+      run: sudo apt-get update && sudo apt-get install -y musl-tools
 
     - name: Cache cargo dependencies
       uses: actions/cache@v4
@@ -94,6 +104,11 @@ jobs:
 
     - name: Install Rust toolchain
       uses: dtolnay/rust-toolchain@stable
+      with:
+        targets: x86_64-unknown-linux-musl
+
+    - name: Install musl tools
+      run: sudo apt-get update && sudo apt-get install -y musl-tools
 
     - name: Build for CodeQL
       run: cargo build --release
