fix(ci): resolve security and license issues
- Replace deprecated tempdir with tempfile to fix RUSTSEC-2023-0018
- Add BSD-2-Clause and MITNFA to allowed licenses in deny.toml
- Add MIT license field to Cargo.toml files
- Update all test code to use tempfile instead of tempdir

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "frozenkrill"
 version = "0.0.0"
 edition = "2021"
+license = "MIT"
 
 [workspace]
 members = ["frozenkrill-core"]
@@ -30,7 +31,7 @@ cli_tests = ["rexpect"]
 
 [dev-dependencies]
 pretty_assertions = "1"
-tempdir = "0.3"
+tempfile = "3.20"
 
 [profile.release]
 strip = true
