--- a/deny.toml
+++ b/deny.toml
@@ -18,12 +18,14 @@ allow = [
     "MIT",
     "Apache-2.0",
     "Apache-2.0 WITH LLVM-exception",
+    "BSD-2-Clause",
     "BSD-3-Clause",
     "ISC",
     "MPL-2.0",
     "Unicode-3.0",
     "Zlib",
     "CC0-1.0",
+    "MITNFA",
 ]
 
 [bans]
