--- a/frozenkrill-core/Cargo.toml
+++ b/frozenkrill-core/Cargo.toml
@@ -2,6 +2,7 @@
 name = "frozenkrill-core"
 version = "0.0.0"
 edition = "2021"
+license = "MIT"
 
 [dependencies]
 alkali = "0.3"
@@ -40,4 +41,4 @@ mockall = "0.13"
 orion = "0.17"
 pretty_assertions = "1"
 rargon2 = { version = "2", package = "rust-argon2" }
-tempdir = "0.3"
+tempfile = "3.20"
