--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -10,6 +10,13 @@ jobs:
       contents: write
     steps:
       - uses: actions/checkout@v4
+      - name: Install Nix
+        uses: cachix/install-nix-action@v24
+        with:
+          extra_nix_config: |
+            experimental-features = nix-command flakes
+      - name: Setup Magic Nix Cache
+        uses: DeterminateSystems/magic-nix-cache-action@main
       - name: rustup update
         run: rustup update
       - name: Show cargo version
@@ -32,12 +39,12 @@ jobs:
       - name: Test x86_64-unknown-linux-gnu
         run: |
           cargo test --target=x86_64-unknown-linux-gnu --release --frozen --workspace --features cli_tests -- --nocapture --test-threads 1
-      - name: Build x86_64-unknown-linux-musl
+      - name: Build x86_64-unknown-linux-musl using Nix
         run: |
-          cargo clean && cross build --target=x86_64-unknown-linux-musl --release --frozen
-      - name: Test x86_64-unknown-linux-musl
+          cargo clean && nix develop -c cargo build --target=x86_64-unknown-linux-musl --release --frozen
+      - name: Test x86_64-unknown-linux-musl using Nix
         run: |
-          cross test --target=x86_64-unknown-linux-musl --release --frozen --workspace --features cli_tests -- --nocapture --test-threads 1
+          nix develop -c cargo test --target=x86_64-unknown-linux-musl --release --frozen --workspace --features cli_tests -- --nocapture --test-threads 1
       - name: Package x86_64-unknown-linux-musl
         run: |
           mkdir -p frozenkrill-x86_64-linux &&
