test(cli): migrate from rexpect to expectrl
- Replace git-based rexpect dependency with expectrl v0.7 from crates.io
- Update test helper functions to use expectrl Session API
- Fix API differences: spawn() takes string instead of Command
- Replace exp_string() with expect() and exp_eof() with expect(Eof)
- All CLI tests passing with the new expectrl implementation

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,11 +23,11 @@ qr2term = "0.3"
 serde = { version = "1", features = ["derive"] }
 termimad = "0.26"
 zxcvbn = "3"
-rexpect = { git = "https://github.com/galtland/rexpect", branch = "verbose", optional = true }
+expectrl = { version = "0.7", optional = true }
 
 [features]
 default = []
-cli_tests = ["rexpect"]
+cli_tests = ["expectrl"]
 
 [dev-dependencies]
 pretty_assertions = "1"
