--- a/frozenkrill-core/Cargo.toml
+++ b/frozenkrill-core/Cargo.toml
@@ -2,7 +2,7 @@
 name = "frozenkrill-core"
 version = "0.0.0"
 edition = "2021"
-license = "MIT"
+license = "MIT OR Apache-2.0"
 
 [dependencies]
 alkali = "0.3"
