--- a/frozenkrill-core/Cargo.toml
+++ b/frozenkrill-core/Cargo.toml
@@ -14,23 +14,23 @@ bip39 = { git = "https://github.com/rust-bitcoin/rust-bip39", features = [
 ] }
 bitcoin = "0.32"
 blake3 = { version = "1", features = ["rayon"] }
-env_logger = "0.10"
+env_logger = "0.11"
 flate2 = "1"
 hex = "0.4"
-itertools = "0.13"
+itertools = "0.14"
 log = "0.4"
 miniscript = "12"
 once_cell = "1"
-rand = "0.8"
-rand_core = "0.6"
+rand = "0.9"
+rand_core = "0.9"
 rayon = "1.11"
 regex = "1"
-secp256k1 = { version = "0.29", features = ["rand-std"] }
-secrecy = "0.8"
+secp256k1 = { version = "0.31", features = ["rand", "std"] }
+secrecy = "0.10"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 sha2 = "0.10"
-thiserror = "1"
+thiserror = "2"
 walkdir = "2"
 zeroize = { version = "1", features = ["zeroize_derive"] }
 
